upload homeworks including 1. lecture exercise and solutions 2. assignment 1,2,3 solutions